# ovs

./: .travis.yml  Makefile.am  NEWS  acinclude.m4  configure.ac
.github/workflows/: build-and-test.yml
.travis/: linux-build.sh
Documentation/intro/install/: afxdp.rst
bpf/: .gitignore  Makefile.am  bpf_compiler.h  bpf_miniflow.h  bpf_netlink.h  bpf_workaround.h  flowtable_afxdp.c  xdp_noop.c
include/openvswitch/: tun-metadata.h
lib/: automake.mk  bpf-util.c  bpf-util.h  netdev-afxdp.c  netdev-afxdp.h  netdev-linux-private.h  netdev-offload-provider.h  netdev-offload-xdp.c  netdev-offload-xdp.h  netdev-offload.c  netdev.c
